--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         </header>
 
         <main class="site-main bg-light mt-5">
-            <h1 class="main-heading text-center display-2">Discover Electric Vehicles - Driving the Future!</h1>
+            <h1 class="main-heading text-center display-1">Discover Electric Vehicles - Driving the Future!</h1>
+
+            <section id="transparency" class="text-center">
+                <h2 class="display-7">Transparency</h2>
+                <p class="lead">Our commitment to innovation is driven by transparency, ensuring our customers are
+                    informed about the latest advancements in EV technology and sustainability efforts.</p>
+            </section>
 
             <section class="article-left row mb-4">
                 <div class="image col-md-6">
@@ -32,33 +38,46 @@
                         title="Electric Vehicle on the Road" class="img-fluid">
                 </div>
                 <div class="content col-md-6">
-                    <h2 class="display-5">Why Choose Electric Vehicles?</h2>
-                    <p class="lead">Electric vehicles (EVs) are revolutionizing the way we drive. They offer an
-                        eco-friendly alternative to traditional gas-powered cars by running on electricity, reducing
-                        emissions, and helping combat climate change.</p>
+                    <h2 class="display-10">Why Choose Electric Vehicles?</h2>
+                    <p class=>Electric vehicles (EVs) are fundamentally
+                        transforming the automotive industry and the way people
+                        think about transportation. Unlike traditional gas-powered
+                        cars that rely on fossil fuels, EVs run on electricity, which
+                        can be sourced from renewable energy like solar or wind power.
+                        This shift significantly reduces harmful emissions, including
+                        carbon dioxide and other greenhouse gases, which contribute
+                        to air pollution and climate change. By relying on cleaner energy,
+                        EVs not only lower the carbon footprint of individual drivers but
+                        also help in reducing our overall dependence on non-renewable resources.
+                    </p>
                 </div>
             </section>
 
             <section class="article-right row mb-4">
                 <div class="content col-md-6">
-                    <h2 class="display-5">Benefits of Electric Vehicles</h2>
-                    <p class="lead">Electric vehicles require less maintenance and have lower long-term upkeep costs.
-                        They offer zero tailpipe emissions, contributing to a cleaner environment.</p>
+                    <h2 class="display-10">Benefits of Electric Vehicles</h2>
+                    <p class=>Electric vehicles require less maintenance
+                        compared to traditional internal combustion engine
+                        cars due to their simpler design. With fewer moving parts,
+                        such as the absence of an engine, transmission, or exhaust
+                        system, there’s less wear and tear, reducing the need for
+                        frequent repairs or replacements. Routine services like oil
+                        changes or engine tune-ups are no longer necessary, contributing
+                        to lower long-term upkeep costs. Additionally, EVs produce zero
+                        tailpipe emissions, meaning they don’t release pollutants such
+                        as carbon dioxide, nitrogen oxides, or particulate matter into
+                        the air. This leads to improved air quality, making them a more
+                        environmentally friendly option for cities and communities.
+                    </p>
                 </div>
                 <div class="image col-md-6">
                     <img src="ev_charging.jpg" alt="An electric vehicle plugged into a charging station"
                         title="Charging an Electric Vehicle" class="img-fluid">
                 </div>
             </section>
-
-            <section id="transparency" class="text-center bg-light">
-                <h2 class="display-5">Transparency in Electric Vehicle Technology</h2>
-                <p class="lead">Our commitment to innovation is driven by transparency, ensuring our customers are
-                    informed about the latest advancements in EV technology and sustainability efforts.</p>
-            </section>
         </main>
 
-        <footer class="bg-black text-white text-center py-1 p-1">
+        <footer class="bg-black text-white text-center py-3 p-3">
             &copy; Electric Future 2024. All Rights Reserved.
         </footer>
     </div>
